--- a/FFeed/review.css
+++ b/FFeed/review.css
@@ -1,4 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Proxima Nova:400,800");
+
 
 :root {
     --primary-color: green;
@@ -35,11 +37,15 @@ header .logo{
   color: #192a56;
   font-size: 2.5rem;
   font-weight: bolder;
+  text-decoration: none;
+  text-align: center;
 }
 
 header .logo i{
   color: #27ae60;
+  
 }
+
 .bd {
   
   background-position: bottom center;
